@@ -528,7 +528,7 @@ FIND_PACKAGE(CompilerAttribute)
 FIND_PACKAGE(CompilerVisibility)
 FIND_PACKAGE(CompilerFlagsSet)
 
-ADD_DEFINE(LINUX_AL)
+ADD_DEFINE(AL_SUPPORT_BYTE_LOKI_SOURCE_ATTR_)
 ADD_DEFINITIONS(-DAL_BUILD_LIBRARY)
 
 
